--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<p><!--[-->The search for extraterrestrial intelligence attempts to answer some of the biggest questions that has been ravaging the human conscience; whether mankind is truly alone in the universe, and how life begins on a celestial body. Due to the constant developments in discovering exoplanets, new systems such as TRAPPIST-1 have been heavily debated over the prospects of developing life.<!--]--></p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Begin the Search!</a>
+								<a href="#banner" class="button circled scrolly">Search!</a>
 							</footer>
 						</div>
 
