--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">Life Beyond Earth</a></h1>
 								<hr />
-								<p><!--[-->The search for extraterrestrial intelligence attempts to answer some of the biggest questions that has been ravaging the human conscience; whether mankind is truly alone in the universe, and how life begins on a celestial body. Due to the constant developments in discovering exoplanets, new systems such as TRAPPIST-1 have been heavily debated over the prospects of developing life.<!--]--></p>
+								<p><!--[-->The search for extraterrestrial intelligence attempts to answer some of the biggest questions that has been ravaging the human conscience; whether mankind is truly alone in the universe, and how life begins on a celestial body. <!--]--></p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Search!</a>
@@ -35,27 +35,6 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Dropdown</a>
-									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul>
-								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
 							</ul>
 						</nav>
 
