Add word to not sound dumb to NASA employees
Jesus I can't believe I submitted this boi without this

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p></p>
 					<p>Can life exist beyond Earth?</a></p>
 					<p></p>
-					<h2>What once seemed like a wildly fictitious pop culture reference to the public, is now one of NASA’s most objectives: finding life beyond Earth.</h2>
+					<h2>What once seemed like a wildly fictitious pop culture reference to the public, is now one of NASA’s most pertinent objectives: finding life beyond Earth.</h2>
 				</header>
 			</section>
 
